--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sitio Web sobre tecnología.">
+    <meta name="robots" content="index,follow">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Maquetado</title>
+    <link rel="shortcut icon" href="../assets/icon-menu.svg">
+    <title>Maquetado Web</title>
 </head>
 <body>
-    
+    <header>
+        <nav></nav>
+    </header>
+
+    <main>
+        <section></section>
+    </main>
+    <section>
+        
+    </section>
+
+    <footer></footer>
+
+    <!-- <script src="" type="module"></script> -->
 </body>
 </html>
