--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,10 +16,34 @@
     </header>
 
     <main>
-        <section></section>
+        <section>
+            <article>
+                <ul>
+                    <li>
+                        <a href=""></a>
+                        <p></p>
+                        <h1></h1>
+                    </li>
+                </ul>
+                <ol></ol>
+            </article>
+        </section>
     </main>
-    <section>
-        
+    <section class="section two">
+        <h1>Soy una Lista</h1>
+        <div>
+            <ol>
+                <li><a href="https://es.wikipedia.org/wiki/Manzana" target="principal">Manzana</a></li>
+                <li><a href="#">Plátano</a></li>
+            </ol>
+        </div>
+        <div>
+            <h2>Segunda Lista</h2>
+            <ul>
+                <li><a href="#">PlayStation</a></li>
+                <li><a href="#">Xbox</a></li>
+            </ul>
+        </div>
     </section>
 
     <footer></footer>
