--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,24 +28,29 @@
                 <ol></ol>
             </article>
         </section>
-    </main>
-    <section class="section two">
-        <h1>Soy una Lista</h1>
-        <div>
-            <ol>
-                <li><a href="https://es.wikipedia.org/wiki/Manzana" target="principal">Manzana</a></li>
-                <li><a href="#">Plátano</a></li>
-            </ol>
-        </div>
-        <div>
-            <h2>Segunda Lista</h2>
-            <ul>
-                <li><a href="#">PlayStation</a></li>
-                <li><a href="#">Xbox</a></li>
-            </ul>
-        </div>
-    </section>
 
+        <section class="section two">
+            <h1>Soy una Lista</h1>
+            <div>
+                <ol>
+                    <li><a href="https://es.wikipedia.org/wiki/Manzana" target="principal">Manzana</a></li>
+                    <li><a href="#">Plátano</a></li>
+                </ol>
+            </div>
+            <div>
+                <h2>Segunda Lista</h2>
+                <ul>
+                    <li><a href="#">PlayStation</a></li>
+                    <li><a href="#">Xbox</a></li>
+                </ul>
+            </div>
+        </section>
+
+        <section>
+            
+        </section>
+    </main>
+   
     <footer></footer>
 
     <!-- <script src="" type="module"></script> -->
