--- a/src/html/index.html
+++ b/src/html/index.html
@@ -47,7 +47,9 @@
         </section>
 
         <section>
-            
+            <div class="image">
+                <img src="../assets/image3.jpg" alt="image-1">
+            </div>
         </section>
     </main>
    
