--- a/src/html/index.html
+++ b/src/html/index.html
@@ -47,10 +47,20 @@
         </section>
 
         <section>
-            <div class="image">
+           <!--  <div class="image">
                 <img src="../assets/image3.jpg" alt="image-1">
-            </div>
+            </div> -->
+         <!--    <figure class="image-One">
+                  <img src="../assets/image3.jpg" alt="Avengers-premiere">
+                  <figcaption>Imagen de la premiere de la película Avengers</figcaption>
+            </figure> -->
         </section>
+     <!--    <section>
+            <picture class="hero__picture">
+                <source media="(min-width: 768px)" srcset="../assets/girl2.jpg">
+                <img src="../assets/girl2.jpg" alt="image__2">
+            </picture>
+        </section> -->
     </main>
    
     <footer></footer>
