--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,7 +29,7 @@
             </article>
         </section>
 
-        <section class="section two">
+      <!--   <section class="section two">
             <h1>Soy una Lista</h1>
             <div>
                 <ol>
@@ -44,7 +44,7 @@
                     <li><a href="#">Xbox</a></li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
         <section>
            <!--  <div class="image">
@@ -54,13 +54,33 @@
                   <img src="../assets/image3.jpg" alt="Avengers-premiere">
                   <figcaption>Imagen de la premiere de la película Avengers</figcaption>
             </figure> -->
-        </section>
+
+           <!--  <video src="../assets/BigBuckBunny.mp4" controls preload="auto"></video> -->
+             <!-- <video src="../assets/BigBuckBunny.mp4#t=20,60" controls preload="auto"></video> -->
+             <!-- <video controls preload="auto">
+                 <source src="../assets/BigBuckBunny.mp4" type="video/mp4">
+             </video>      -->
+              <!-- <video width="320" height="240" controls preload="auto">
+                 <source src="../assets/BigBuckBunny.mp4" type="video/mp4">
+             </video>      -->
+
+            <!--  <iframe width="420" height="315" src="https://youtu.be/K-PoEVMEhcY" frameborder="0"></iframe> -->
+          <!--   <iframe width="560" height="315" src="https://www.youtube.com/embed/K-PoEVMEhcY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+
+            <!--  <audio controls>
+                <source src="horse.ogg" type="audio/ogg">
+                <source src="horse.mp3" type="audio/mpeg">
+              Your browser does not support the audio element.
+              </audio> -->
+            </section>
+
      <!--    <section>
             <picture class="hero__picture">
                 <source media="(min-width: 768px)" srcset="../assets/girl2.jpg">
                 <img src="../assets/girl2.jpg" alt="image__2">
             </picture>
         </section> -->
+        
     </main>
    
     <footer></footer>
