--- a/src/html/index.html
+++ b/src/html/index.html
@@ -80,10 +80,60 @@
                 <img src="../assets/girl2.jpg" alt="image__2">
             </picture>
         </section> -->
-        
+
     </main>
    
-    <footer></footer>
+    <footer>
+        <!-- <form action="">
+            <label for="name">
+                <span>¿What is your name...?</span>
+                <input type="text" id="name" placeholder="Your name...">
+            </label>
+
+            <label for="init-platzi">
+                <span>¿What your day init with Platzi...?</span>
+                <input type="date" id="init-platzi">
+            </label>
+
+            <label for="horario">
+                <span>¿Qué hora estudias?</span>
+                <input type="time" id="horario">
+            </label>
+        </form> -->
+
+       <!--  <form action="">
+            <label for="hora">
+                <span></span>
+                <input type="time" id="hora" placeholder="" name="hora">
+            </label>
+
+            <label for="dia">
+                <span></span>
+                <input type="date" id="dia" placeholder="" name="dia">
+            </label>
+
+            <label for="semana">
+                <span></span>
+                <input type="week" id="semana" placeholder="" name="semana">
+            </label>
+
+            <label for="mes">
+                <span></span>
+                <input type="month" id="mes" placeholder="" name="mes">
+            </label>
+                <input type="submit">
+        </form> -->
+
+       <!--  <form action="">
+            <label for="calendario">
+                <span>Calendario</span>
+                <input type="datetime-local" id="calendario" name="calendario">
+            </label>
+            <input type="submit">
+        </form> -->
+
+        
+    </footer>
 
     <!-- <script src="" type="module"></script> -->
 </body>
