--- a/src/html/index.html
+++ b/src/html/index.html
@@ -132,7 +132,7 @@
             <input type="submit">
         </form> -->
 
-        <form action="">
+   <!--      <form action="">
             <label for="nombre">
                 <span>¿Cuál es tú nombre</span>
                 <input type="text" name="nombre" id="nombre" autocomplete="name" required>
@@ -154,7 +154,28 @@
             </label>
 
         </form>
-        <input type="submit">
+        <input type="submit"> -->
+         
+      <!--  Select = Encontrar lo que búsca -->
+      <!--   <select name="cursos" id="">
+            <option value="Javascript">Javascript</option>
+            <option value="HTML">HTML</option>
+            <option value="CSS">CSS</option>
+            <option value="Python">Python</option>
+        </select> -->
+
+       <!--  <input list="cursos">
+         <datalist id="cursos">
+           <option value="Javascript">Javascript</option>
+           <option value="Python">Python</option>
+           <option value="Ux/ux">UX/UI</option>
+           <option value="React">React</option>
+           <option value="Web Stansards"></option>
+         </datalist> -->
+
+         <!-- Button -->
+         <input type="submit" value="Name">
+         <button type="submit" id="" class="button">Names</button>
     </footer>
 
     <!-- <script src="" type="module"></script> -->
