pseudo-class and elements

--- a/src/html/indexCSS.html
+++ b/src/html/indexCSS.html
@@ -6,13 +6,23 @@
     <meta name="description" content="Sitio Web sobre tecnología.">
     <meta name="robots" content="index,follow">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/styleCSS.css">
     <link rel="shortcut icon" href="../assets/icon-menu.svg">
+    <link rel="stylesheet" href="https://use.typekit.net/eoy0gzf.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
+    <link rel="stylesheet" href="../css/styleCSS.css">
     <title>Web CSS</title>
     </header>
     <body>
         <header>
-            <nav></nav>
+            <nav>
+                <ul class="main-nav">
+                    <li class="main-nav__item"><a href="../html/indexCSS.html" target="home">Home</a></li>
+                    <li class="main-nav__item"><a href="../html/indexCSS.html" target="cursos">Cursos</a></li>
+                    <li class="main-nav__item"><a href="../html/indexCSS.html" target="foro">Foro</a></li>
+                    <li class="main-nav__item"><a href="../html/indexCSS.html" target="Agenda">Agenda</a></li>
+                </ul>
+            </nav>
         </header>
 
         <main>
@@ -21,6 +31,6 @@
 
         <footer></footer>
 
-        <script src=""></script>
+       <!--  <script src="" type="module"></script> -->
     </body>
 </html>
