--- a/src/html/indexCSS.html
+++ b/src/html/indexCSS.html
@@ -26,7 +26,11 @@
         </header>
 
         <main>
-            <section></section>
+            <section>
+                <div class="demo">
+                    <p>This is a prove of the CSS</p>
+                </div>
+            </section>
         </main>
 
         <footer></footer>
