--- a/src/html/indexCSS.html
+++ b/src/html/indexCSS.html
@@ -30,6 +30,10 @@
                 <div class="demo">
                     <p>This is a prove of the CSS</p>
                 </div>
+                <div class="">
+                    <a href="http//google.com" class="demo-link" target="_blank">Google.com</a>
+                    <a href="http//Youtube.com" class="demo-link" target="_blank">Youtube.com.com</a>
+                </div>
             </section>
         </main>
 
