--- a/src/html/indexCSS.html
+++ b/src/html/indexCSS.html
@@ -31,8 +31,8 @@
                     <p>This is a prove of the CSS</p>
                 </div>
                 <div class="">
-                    <a href="http//google.com" class="demo-link" target="_blank">Google.com</a>
-                    <a href="http//Youtube.com" class="demo-link" target="_blank">Youtube.com.com</a>
+                    <a href="https://www.google.com.mx/?hl=es-419" class="demo-link" target="_blank">Google.com</a>
+                    <a href="https://www.youtube.com/?hl=es-419&gl=MX" class="demo-link" target="_blank">Youtube.com.com</a>
                 </div>
             </section>
         </main>
