--- a/src/html/indexCSS.html
+++ b/src/html/indexCSS.html
@@ -16,25 +16,25 @@
     <body>
         <header>
             <nav>
-                <ul class="main-nav">
+              <!--   <ul class="main-nav">
                     <li class="main-nav__item"><a href="../html/indexCSS.html" target="home">Home</a></li>
                     <li class="main-nav__item"><a href="../html/indexCSS.html" target="cursos">Cursos</a></li>
                     <li class="main-nav__item"><a href="../html/indexCSS.html" target="foro">Foro</a></li>
                     <li class="main-nav__item"><a href="../html/indexCSS.html" target="Agenda">Agenda</a></li>
-                </ul>
+                </ul> -->
             </nav>
         </header>
 
         <main>
-            <section>
-                <div class="demo">
+           <section>
+               <!--  <div class="demo">
                     <p>This is a prove of the CSS</p>
-                </div>
-                <div class="">
+                </div> -->
+               <div class="">
                     <a href="https://www.google.com.mx/?hl=es-419" class="demo-link" target="_blank">Google.com</a>
                     <a href="https://www.youtube.com/?hl=es-419&gl=MX" class="demo-link" target="_blank">Youtube.com.com</a>
                 </div>
-            </section>
+            </section> 
         </main>
 
         <footer></footer>
