--- a/src/html/indexCSS.html
+++ b/src/html/indexCSS.html
@@ -30,11 +30,18 @@
                <!--  <div class="demo">
                     <p>This is a prove of the CSS</p>
                 </div> -->
-               <div class="">
+            <!--    <div class="">
                     <a href="https://www.google.com.mx/?hl=es-419" class="demo-link" target="_blank">Google.com</a>
                     <a href="https://www.youtube.com/?hl=es-419&gl=MX" class="demo-link" target="_blank">Youtube.com.com</a>
-                </div>
+                </div> -->
             </section> 
+         <!--    //grid -->
+            <section>
+                <h1>Soy un título</h1>
+                <div>
+                    <p>Soy un párrafo</p>
+                </div>
+            </section>
         </main>
 
         <footer></footer>
