--- a/src/html/indexTwo.html
+++ b/src/html/indexTwo.html
@@ -32,6 +32,28 @@
                 <div class="box" id="four">4</div>
             </div>
         </section>  -->
+        <section class="navs">
+           <!--  <ul class="nav">
+                <li>One</li>
+                <li>Two</li>
+                <li>Three</li>
+                <li>Four</li>
+            </ul> -->
+         <!--    <div class="cont">One</div>
+            <div class="cont">Two</div>
+            <div class="cont">Three</div>
+            <div class="cont">Four</div> -->
+           <!--  <div class="content">
+                 <img src="../assets/platzi-logo.png" alt="logo">
+            </div>
+
+            <ul class="List">
+             <li>One</li>
+             <li>Two</li>
+             <li>Three</li>
+             <li>Four</li>
+            </ul> -->
+        </section>
     </main>
     <footer></footer>
     <script src="" type="module"></script>
