--- a/src/html/indexTwo.html
+++ b/src/html/indexTwo.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <link rel="stylesheet" href="../css/styleThree.css">
+    <link rel="stylesheet" href="../css/responsiveWeb.css">
     <title>StyleThree</title>
 </head>
 <body>
