--- a/src/html/indexTwo.html
+++ b/src/html/indexTwo.html
@@ -12,6 +12,7 @@
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <link rel="stylesheet" href="../css/styleThree.css">
     <link rel="stylesheet" href="../css/responsiveWeb.css">
+    <link rel="stylesheet" href="../css/responsiveTwo.css" media="screen and (min-width:480px)">
     <title>StyleThree</title>
 </head>
 <body>
