--- a/src/html/indexGo.html
+++ b/src/html/indexGo.html
@@ -12,10 +12,18 @@
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <link rel="stylesheet" href="../css/styleMaqueta.css">
     <link rel="stylesheet" href="../css/styleMaquetaRes.css" media="screen and (min-width:48rem">
+    <title>Maquetado | Proyect Web</title>
 </head>
 <body>
     <header>
-        <nav></nav>
+        <nav>
+            <ul>
+                <li><a href="https://www.google.com/?hl=es" target="_blank">Gmail</a></li>
+                <li><a href="https://www.google.com.mx/imghp?hl=es&tab=wi&authuser=0&ogbl" target="_blank">Images</a></li>
+                <li><a href="" target="_blank">Icon</a></li>
+                <li><a href="" target="_blank">Photo</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
