--- a/src/html/indexGo.html
+++ b/src/html/indexGo.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="https://www.google.com/?hl=es" target="_blank">Gmail</a></li>
                 <li><a href="https://www.google.com.mx/imghp?hl=es&tab=wi&authuser=0&ogbl" target="_blank">Images</a></li>
-                <li><a href="" target="_blank">Icon</a></li>
+                <li><a href="https://www.google.com.mx/webhp?tab=nw&authuser=0" target="_blank"><i class="fas fa-ellipsis-h"></i></a></li>
                 <li><a href="" target="_blank">Photo</a></li>
             </ul>
         </nav>
