--- a/src/html/indexGo.html
+++ b/src/html/indexGo.html
@@ -21,7 +21,11 @@
                 <li><a href="https://www.google.com/?hl=es" target="_blank">Gmail</a></li>
                 <li><a href="https://www.google.com.mx/imghp?hl=es&tab=wi&authuser=0&ogbl" target="_blank">Images</a></li>
                 <li><a href="https://www.google.com.mx/webhp?tab=nw&authuser=0" target="_blank"><i class="fas fa-ellipsis-h"></i></a></li>
-                <li><a href="" target="_blank">Photo</a></li>
+                <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">
+                    <picture>
+                        <img src="https://lh3.googleusercontent.com/ogw/ADGmqu87DwXN5SSV5GoVRA9LbU9w5AwL6T8Zu9iBweJc=s32-c-mo" alt="image-nav_icon">
+                    </picture>
+                </a></li>
             </ul>
         </nav>
     </header>
