--- a/src/html/indexGo.html
+++ b/src/html/indexGo.html
@@ -31,7 +31,23 @@
     </header>
 
     <main>
-        <section></section>
+        <section class="main-logo">
+            <picture>
+                <img src="" alt="Image-Google">
+            </picture>
+        </section>
+
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="search-icon"><i class="fas fa-search"></i></span>
+                <input type="text">
+                <a class="micro-icon" href=""><i class="fas fa-microphone"></i></a>
+            </div>
+        </section>
+        <section class="main-buttons">
+           <div><button>Search Google</button></div>
+           <div><button>Icons</button></div>
+        </section>
     </main>
 
     <footer>
