--- a/src/html/indexGo.html
+++ b/src/html/indexGo.html
@@ -33,7 +33,7 @@
     <main>
         <section class="main-logo">
             <picture>
-                <img src="" alt="Image-Google">
+                <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png" alt="Image-Google" title="Google Search">
             </picture>
         </section>
 
