finished-google_grid

--- a/src/html/indexGo.html
+++ b/src/html/indexGo.html
@@ -33,25 +33,25 @@
     <main>
         <section class="main-logo">
             <picture>
-                <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png" alt="Image-Google" title="Google Search">
+                <img src="https://img2.freepng.es/20180324/fcw/kisspng-google-logo-google-images-google-5ab6f0fa4c3175.5450173415219386823121.jpg" alt="Image-Google" title="Google Search">
             </picture>
         </section>
 
         <section class="main-input">
             <div class="main-input-container">
                 <span class="search-icon"><i class="fas fa-search"></i></span>
-                <input type="text">
+                <input type="text" placeholder="Buscar en Google o escribir una URL" alt="Buscador de Google">
                 <a class="micro-icon" href=""><i class="fas fa-microphone"></i></a>
             </div>
         </section>
         <section class="main-buttons">
-           <div><button>Search Google</button></div>
-           <div><button>Icons</button></div>
+           <div><button alt="Botón Search" title="Botón Búsqueda">Search Google</button></div>
+           <div><button alt="Botón Icon" title="Botón Icono">Icons Dev</button></div>
         </section>
     </main>
 
     <footer>
-        
+        <p>Google Offered in: Español(Latinoamérica)</p>
     </footer>
     
     <script src="" type="module"></script>
