--- a/src/html/indexGo.html
+++ b/src/html/indexGo.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <link rel="stylesheet" href="../css/styleMaqueta.css">
-    <link rel="stylesheet" href="../css/styleMaquetaRes.css" media="screen and (min-width:48rem">
+    <link rel="stylesheet" href="../css/styleMaquetaRes.css" media="screen and (min-width:48rem)">
     <title>Maquetado | Proyect Web</title>
 </head>
 <body>
