--- a/src/html/indexDiscord.html
+++ b/src/html/indexDiscord.html
@@ -17,9 +17,62 @@
     <title>Discord | Web</title>
 </head>
 <body>
-    <header>
-        <nav></nav>
-    </header>
+    <section class="hero">
+        <header class="main-header container">
+            <nav class="main-nav">
+              <a href="./indexDiscord.html" class="logo">
+                 <picture>
+                    <img src="../assets/logo.svg" alt="logo-Discord" title="Image-logo">
+                 </picture>
+              </a>
+
+              <ul class="nav-list">
+                  <li class="nav-item">
+                      <a href="" class="nav-link">Download</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="" class="nav-link">Why Discord</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="" class="nav-link">Nitro</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="" class="nav-link">Safety</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="" class="nav-link">Support</a>
+                  </li>
+              </ul>
+
+              <div class="nav-items-right">
+                  <a href="#" class="btn btn-small btn-light btn-login">
+                      Login
+                  </a>
+                  <span class="mobile-toggle">
+                      <i class="bx bx-menu"></i>
+                      <i class="bx bx-x"></i>
+                  </span>
+              </div>
+            </nav>
+        </header>
+
+        <div class="row container">
+            <div class="hero-content-wrap">
+                <h1 class="title primary-title">Your place to talk</h1>
+                <p class="hero-decription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda obcaecati animi molestiae rem minima aliquam architecto, inventore fugit perspiciatis, maiores et commodi? Delectus dignissimos dolorum obcaecati consequatur ab explicabo iure.</p>
+
+                <div class="hero-btn-grow">
+                    <a href="" class="btn btn-large btn-light">
+                        <i class="bx bx-download">Download for Windows <title>Button-Downoald</title></i>
+                    </a>
+                    <a href="" class="btn btn-large btn-dark">
+                       Open Discord in your Browser
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+   
 
     <main>
         <section></section>
