--- a/src/html/indexDiscord.html
+++ b/src/html/indexDiscord.html
@@ -49,8 +49,8 @@
                       Login
                   </a>
                   <span class="mobile-toggle">
-                      <i class="bx bx-menu"></i>
-                      <i class="bx bx-x"></i>
+                      <i class="bx bx-menu btn-open"></i>
+                      <i class="bx bx-x btn-close"></i>
                   </span>
               </div>
             </nav>
@@ -74,13 +74,13 @@
     </section>
    
 
-    <main>
+   <!--  <main>
         <section></section>
     </main>
 
     <footer>
 
-    </footer>
+    </footer> -->
     <script src="" type="module"></script>
 </body>
 </html>
