--- a/src/html/indexDiscord.html
+++ b/src/html/indexDiscord.html
@@ -62,25 +62,62 @@
                 <p class="hero-decription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda obcaecati animi molestiae rem minima aliquam architecto, inventore fugit perspiciatis, maiores et commodi? Delectus dignissimos dolorum obcaecati consequatur ab explicabo iure.</p>
 
                 <div class="hero-btn-grow">
-                    <a href="" class="btn btn-large btn-light">
+                    <a href="" class="btn btn-large btn-light" title="button">
                         <i class="bx bx-download">Download for Windows <title>Button-Downoald</title></i>
                     </a>
-                    <a href="" class="btn btn-large btn-dark">
+                    <a href="" class="btn btn-large btn-dark" title="button">
                        Open Discord in your Browser
                     </a>
                 </div>
             </div>
         </div>
     </section>
-   
 
-   <!--  <main>
-        <section></section>
-    </main>
+    <section class="collaboration">
+       <div class="row container">
+                <img src="../assets/section-1.svg" class="grid-image" alt="Image-container" title="image-container">
+            <div class="text-group">
+                <h2>An Invite-only place win plenty of room to talk</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae labore dignissimos quibusdam blanditiis vitae, amet necessitatibus iusto fugit, dicta nulla molestias quae incidunt rem voluptate nesciunt ipsam, minus quaerat eveniet.</p>
+            </div>    
+       </div>
+    </section>
+    
+  <svg class="wave" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none">
+  <path class="wave-path" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill="currentColor"></path>
+  </svg>
+  
+  <section class="voice-channel">
+    <div class="row container">
+        <img src="../assets/section-2.svg" class="grid-image" alt="Image-container" title="image-container">
+    <div class="text-group order-1">
+        <h2>An Invite-only place win plenty of room to talk</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae labore dignissimos quibusdam blanditiis vitae, amet necessitatibus iusto fugit, dicta nulla molestias quae incidunt rem voluptate nesciunt ipsam, minus quaerat eveniet.</p>
+    </div>    
+  </section>
 
-    <footer>
+     
+   <svg class="wave" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none">
+    <path class="wave-path" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill="currentColor"></path>
+    </svg> 
 
-    </footer> -->
+   <!--  <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" title="Wave">
+        <path fill="#3261EB" fill-opacity="1" d="M0,128L48,117.3C96,107,192,85,288,85.3C384,85,480,107,576,117.3C672,128,768,128,864,122.7C960,117,1056,107,1152,117.3C1248,128,1344,160,1392,176L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+      </svg> -->
+
+      <section class="moderation-tools">
+        <div class="row container">
+            <img src="../assets/section-3.svg" class="grid-image" alt="Image-container" title="image-container">
+        <div class="text-group order-1">
+            <h2>An Invite-only place win plenty of room to talk</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae labore dignissimos quibusdam blanditiis vitae, amet necessitatibus iusto fugit, dicta nulla molestias quae incidunt rem voluptate nesciunt ipsam, minus quaerat eveniet.</p>
+        </div>    
+      </section>
+
+      <svg class="wave" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none">
+        <path class="wave-path" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill="currentColor"></path>
+        </svg>
+
     <script src="" type="module"></script>
 </body>
 </html>
