--- a/src/html/indexDiscord.html
+++ b/src/html/indexDiscord.html
@@ -109,7 +109,7 @@
         <div class="row container">
             <img src="../assets/section-3.svg" class="grid-image" alt="Image-container" title="image-container">
         <div class="text-group order-1">
-            <h2>An Invite-only place win plenty of room to talk</h2>
+            <h2>From An Invite-only place win plenty of room to talk</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae labore dignissimos quibusdam blanditiis vitae, amet necessitatibus iusto fugit, dicta nulla molestias quae incidunt rem voluptate nesciunt ipsam, minus quaerat eveniet.</p>
         </div>    
       </section>
@@ -117,6 +117,16 @@
       <svg class="wave" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100" preserveAspectRatio="none">
         <path class="wave-path" d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z" fill="currentColor"></path>
         </svg>
+
+        <section class="video-call">
+            <div class="row container">
+               <div class="text-group">
+                <h2>Of the Invite-only place win plenty of room to talk</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae labore dignissimos quibusdam blanditiis vitae, amet necessitatibus iusto fugit, dicta nulla molestias quae incidunt rem voluptate nesciunt ipsam, minus quaerat eveniet.</p>
+               </div>
+               <img src="../assets/section-4.svg" class="grid-image" alt="Image-container" title="image-container">
+            </div>
+        </section>
 
     <script src="" type="module"></script>
 </body>
