--- a/src/html/indexDiscord.html
+++ b/src/html/indexDiscord.html
@@ -128,6 +128,43 @@
             </div>
         </section>
 
+        <section class="download">
+            <div class="row container remove-grid">
+              <img src="../assets/sparkles.svg" alt="Sparkle-image" title="image-sparkle">
+              <h2>Ready to start your journey?</h2>
+              <a href="#" class="btn btn-large btn-brand">
+                  <i class="bx bx-download">Download foe windows</i>
+              </a>
+            </div>
+        </section>
+
+        <footer  class="main-footer">
+            <div class="row container">
+                <h4 class="footer-title">Your place to talk</h4>
+                <div class="languages">
+                    <img src="../assets/flag.png" alt="flag-footer" title="flag-footer">
+                    <span>English,, USA</span> <i class="bx bx-chevron-down"></i>
+                </div>
+                <div class="social-media" >
+                    <a href="#" class="sm-link" alt="icon-twitter" target="_blank" title="twitter-icon">
+                        <i class="bx bxl-twitter">Twitter</i>
+                    </a>
+                    <a href="#" class="sm-link" alt="icon-facebook" target="_blank" title="facebook-icon">
+                        <i class="bx bxl-facebook">Facebook</i>
+                    </a>
+                    <a href="#" class="sm-link" alt="icon-instagram" target="_blank" title="instagram-icon">
+                        <i class="bx bxl-instagram">Instagram</i>
+                    </a>
+                    <a href="#" class="sm-link" alt="icon-youtube" target="_blank" title="youtube-icon">
+                        <i class="bx bxl-youtube">Youtube</i>
+                    </a>
+                    <a href="#" class="sm-link" alt="icon-linkedin" target="_blank" title="linkedin-icon">
+                        <i class="bx bxl-linkedin">Linkedin</i>
+                    </a>
+                </div>
+            </div>
+        </footer>
+
     <script src="" type="module"></script>
 </body>
 </html>
