--- a/src/html/indexDiscord.html
+++ b/src/html/indexDiscord.html
@@ -140,6 +140,7 @@
 
         <footer  class="main-footer">
             <div class="row container">
+               <div class="info-box">
                 <h4 class="footer-title">Your place to talk</h4>
                 <div class="languages">
                     <img src="../assets/flag.png" alt="flag-footer" title="flag-footer">
@@ -162,6 +163,43 @@
                         <i class="bx bxl-linkedin">Linkedin</i>
                     </a>
                 </div>
+            </div>
+            <div class="spacer">
+                <div class="footer-links-group">
+                    <h5 class="footer-title">Product</h5>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                </div>
+                <div class="footer-links-group">
+                    <h5 class="footer-title">Product</h5>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                </div>
+                <div class="footer-links-group">
+                    <h5 class="footer-title">Product</h5>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                    <a href="#" class="footer-link">Download</a>
+                </div>
+                <div class="divider"></div>
+               </div>
+            </div>
+            <div class="row container remove-grid">
+                   <a href="../html/indexDiscord.html" class="logo">
+                     <img src="../assets/logo.svg" alt="Discord-logo" title="logo" alt="logo">
+                   </a>
+                   <a href="#" class="btn btn-small btn-brand">Login</a>
             </div>
         </footer>
 
