--- a/src/html/indexDiscord.html
+++ b/src/html/indexDiscord.html
@@ -13,6 +13,7 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <link rel="stylesheet" href="../css/styleDiscord.css">
+    <link rel="stylesheet" href="../css/discordRespTwo.css" media=" screen and (min-width: 768px)">
     <link rel="stylesheet" href="../css/discordRespo.css" media="screen and (min-width:48rem)">
     <title>Discord | Web</title>
 </head>
@@ -59,7 +60,7 @@
         <div class="row container">
             <div class="hero-content-wrap">
                 <h1 class="title primary-title">Your place to talk</h1>
-                <p class="hero-decription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda obcaecati animi molestiae rem minima aliquam architecto, inventore fugit perspiciatis, maiores et commodi? Delectus dignissimos dolorum obcaecati consequatur ab explicabo iure.</p>
+                <p class="hero-decription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda obcaecati animi molestiae rem minima aliquam architecto, inventore fugit perspiciatis.</p>
 
                 <div class="hero-btn-grow">
                     <a href="" class="btn btn-large btn-light" title="button">
